--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
-    "react-icons": "^4.2.0",
+    "react-icons": "4.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.3.0",
     "react-time-picker": "^6.5.0",
